# populations_paper_code

./: .gitignore  pyproject.toml  readme.md  readme.me
data/: dms2_fp1.npz  dms2_fp2.npz  dms2_fp3.npz  dms_fp1.npz  dms_fp2.npz  dms_fp3.npz  dms_fr_c_boot_distr.npy  dms_fr_results.npz  dms_fr_results2.npz  dms_lr_c_boot_distr.npy  dms_results.npz  mante_fr_c_boot_distr.npy  mante_fr_results.npz  mante_fr_results2.npz  mante_higherrank_results.txt  mante_lr_c_boot_distr.npy  mante_results.npz  raposo_fr_c_boot_distr.npy  raposo_fr_results.npz  raposo_fr_results2.npz  raposo_lr_c_boot_distr.npy  raposo_results.npz  rdm_fr_c_boot_distr.npy  rdm_fr_results.npz  rdm_fr_results2.npz  rdm_lr_c_boot_distr.npy  rdm_results.npz  romo_fr_c_boot_distr.npy  romo_fr_results.npz  romo_fr_results2.npz  romo_lr_c_boot_distr.npy  romo_results.npz  si_fr_dms_res.pkl  si_rank_loss_dms_loss.pkl  si_rank_loss_mante_loss.pkl  si_rank_loss_rdm_loss.pkl  si_rank_loss_romo_loss.pkl
figures_notebooks/: extended_figs6-9_dms.ipynb  fig1_fullrank.ipynb  fig1_lowrank.ipynb  fig1_mante_fr.ipynb  fig1_mante_lr.ipynb  fig1_raposo_fr.ipynb  fig1_raposo_lr.ipynb  fig2_concepts.ipynb  fig2_rdm.ipynb  fig2_romo.ipynb  fig34_dms.ipynb  fig34_mante.ipynb  fig3_rdm.ipynb  fig3_romo.ipynb  fig4-5_mante.ipynb  fig4_mante.ipynb  fig5_dms.ipynb  fig6.ipynb  fig6_mante_regressors.ipynb  fig6_raposo_regressors.ipynb  si_dms2_epochs.ipynb  si_dms_epochs.ipynb  si_fullrank_truncate.ipynb  si_mante_increaserank.ipynb  si_rank_loss.ipynb  si_raposo_mante_fullrank_resampling.ipynb  tutorial.ipynb
(+63 files in other folders)
